# school-m426

./: .gitignore  LICENSE  Makefile  README.md  compose.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: backend.yaml  frontend.yaml  release.yaml  schedule.yaml
api/: Dockerfile  README.md  pdbrc.py  pyproject.toml  ruff.toml
api/api/: main.py
api/tests/: test_app.py
caddy/: Caddyfile
frontend/: .dockerignore  Cargo.toml  Dockerfile  README.md
