[tool.poetry]
name = "api"
version = "0.0.0"
description = ""
authors = ["Arthur Deierlein <info@c0rydoras.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
ruff = "^0.4.2"
uvicorn = "^0.29.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
